--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -325,7 +325,7 @@
 
                             <label for="inputName" class="col-md-2 form-label">VALOR COMPROMETIDO</label>
                             <div class="col-md-4 col-informacion">
-                                <input type="text" class="form-control number" v-model="seguimiento.valor_comprometido"
+                                <input type="text" class="form-control positiveNumber" v-model="seguimiento.valor_comprometido"
                                        id="valor_comprometido" name="valor_comprometido">
                             </div>
                         </div>
@@ -334,13 +334,13 @@
                         <div class=" row mb-4">
                             <label for="inputName" class="col-md-2 form-label">INGRESOS DEL CLIENTE</label>
                             <div class="col-md-4 col-informacion">
-                                <input type="text" class="form-control number" v-model="seguimiento.ingresos_cliente"
+                                <input type="text" class="form-control positiveNumber" v-model="seguimiento.ingresos_cliente"
                                        id="ingresos_cliente" name="ingresos_cliente">
                             </div>
 
                             <label for="inputName" class="col-md-2 form-label">EGRESOS DEL CLIENTE</label>
                             <div class="col-md-4 col-informacion">
-                                <input type="text" class="form-control number" v-model="seguimiento.egresos_cliente"
+                                <input type="text" class="form-control positiveNumber" v-model="seguimiento.egresos_cliente"
                                        id="egresos_cliente" name="egresos_cliente">
                             </div>
                         </div>
@@ -451,7 +451,7 @@
 
                                 <label for="inputName" class="col-md-2 form-label">VALOR COMPROMETIDO</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control number" v-model="seguimiento_diners.valor_comprometido" id="valor_comprometido_diners" name="valor_comprometido_diners">
+                                    <input type="text" class="form-control positiveNumber" v-model="seguimiento_diners.valor_comprometido" id="valor_comprometido_diners" name="valor_comprometido_diners">
                                 </div>
                             </div>
                         </div>
@@ -459,13 +459,13 @@
                             <div class=" row mb-4">
                                 <label for="inputName" class="col-md-2 form-label">INGRESOS DEL CLIENTE</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control number" v-model="seguimiento_diners.ingresos_cliente"
+                                    <input type="text" class="form-control positiveNumber" v-model="seguimiento_diners.ingresos_cliente"
                                            id="ingresos_cliente_diners" name="ingresos_cliente_diners">
                                 </div>
 
                                 <label for="inputName" class="col-md-2 form-label">EGRESOS DEL CLIENTE</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control number" v-model="seguimiento_diners.egresos_cliente"
+                                    <input type="text" class="form-control positiveNumber" v-model="seguimiento_diners.egresos_cliente"
                                            id="egresos_cliente_diners" name="egresos_cliente_diners">
                                 </div>
                             </div>
@@ -576,7 +576,7 @@
 
                                 <label for="inputName" class="col-md-2 form-label">VALOR COMPROMETIDO</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control number" v-model="seguimiento_interdin.valor_comprometido" id="valor_comprometido_interdin" name="valor_comprometido_interdin">
+                                    <input type="text" class="form-control positiveNumber" v-model="seguimiento_interdin.valor_comprometido" id="valor_comprometido_interdin" name="valor_comprometido_interdin">
                                 </div>
                             </div>
                         </div>
@@ -584,13 +584,13 @@
                             <div class=" row mb-4">
                                 <label for="inputName" class="col-md-2 form-label">INGRESOS DEL CLIENTE</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control number" v-model="seguimiento_interdin.ingresos_cliente"
+                                    <input type="text" class="form-control positiveNumber" v-model="seguimiento_interdin.ingresos_cliente"
                                            id="ingresos_cliente_interdin" name="ingresos_cliente_interdin">
                                 </div>
 
                                 <label for="inputName" class="col-md-2 form-label">EGRESOS DEL CLIENTE</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control number" v-model="seguimiento_interdin.egresos_cliente"
+                                    <input type="text" class="form-control positiveNumber" v-model="seguimiento_interdin.egresos_cliente"
                                            id="egresos_cliente_interdin" name="egresos_cliente_interdin">
                                 </div>
                             </div>
@@ -701,7 +701,7 @@
 
                                 <label for="inputName" class="col-md-2 form-label">VALOR COMPROMETIDO</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control number" v-model="seguimiento_discover.valor_comprometido" id="valor_comprometido_discover" name="valor_comprometido_discover">
+                                    <input type="text" class="form-control positiveNumber" v-model="seguimiento_discover.valor_comprometido" id="valor_comprometido_discover" name="valor_comprometido_discover">
                                 </div>
                             </div>
                         </div>
@@ -709,13 +709,13 @@
                             <div class=" row mb-4">
                                 <label for="inputName" class="col-md-2 form-label">INGRESOS DEL CLIENTE</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control number" v-model="seguimiento_discover.ingresos_cliente"
+                                    <input type="text" class="form-control positiveNumber" v-model="seguimiento_discover.ingresos_cliente"
                                            id="ingresos_cliente_discover" name="ingresos_cliente_discover">
                                 </div>
 
                                 <label for="inputName" class="col-md-2 form-label">EGRESOS DEL CLIENTE</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control number" v-model="seguimiento_discover.egresos_cliente"
+                                    <input type="text" class="form-control positiveNumber" v-model="seguimiento_discover.egresos_cliente"
                                            id="egresos_cliente_discover" name="egresos_cliente_discover">
                                 </div>
                             </div>
@@ -826,7 +826,7 @@
 
                                 <label for="inputName" class="col-md-2 form-label">VALOR COMPROMETIDO</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control number" v-model="seguimiento_mastercard.valor_comprometido" id="valor_comprometido_mastercard" name="valor_comprometido_mastercard">
+                                    <input type="text" class="form-control positiveNumber" v-model="seguimiento_mastercard.valor_comprometido" id="valor_comprometido_mastercard" name="valor_comprometido_mastercard">
                                 </div>
                             </div>
                         </div>
@@ -834,13 +834,13 @@
                             <div class=" row mb-4">
                                 <label for="inputName" class="col-md-2 form-label">INGRESOS DEL CLIENTE</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control number" v-model="seguimiento_mastercard.ingresos_cliente"
+                                    <input type="text" class="form-control positiveNumber" v-model="seguimiento_mastercard.ingresos_cliente"
                                            id="ingresos_cliente_mastercard" name="ingresos_cliente_mastercard">
                                 </div>
 
                                 <label for="inputName" class="col-md-2 form-label">EGRESOS DEL CLIENTE</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control number" v-model="seguimiento_mastercard.egresos_cliente"
+                                    <input type="text" class="form-control positiveNumber" v-model="seguimiento_mastercard.egresos_cliente"
                                            id="egresos_cliente_mastercard" name="egresos_cliente_mastercard">
                                 </div>
                             </div>
@@ -4043,6 +4043,11 @@
                 jQuery.validator.addMethod("lettersonly", function(value, element){
                     return this.optional(element) || /^[a-z áãâäàéêëèíîïìóõôöòúûüùç]+$/i.test(value);
                 }, "Este campo solo acepta letras y espacios");
+
+                jQuery.validator.addMethod('positiveNumber',
+                    function (value) {
+                        return Number(value) > 0;
+                    }, 'Ingrese un número mayor que 0.');
 
                 $('#btnRegresar').click(function () {
                     window.open("{{ root }}/producto/indexDiners", "_self");
