--- a/views/reportes/baseGeneral.twig
+++ b/views/reportes/baseGeneral.twig
@@ -116,6 +116,8 @@
                             <th>VALOR COMPROMETIDO</th>
                             <th>GEOREFERENCIA</th>
                             <th>TIPO NEGOCIACION</th>
+
+                            <th>TIPO GESTIÓN</th>
 						</tr>
 						</thead>
 						<tbody>
@@ -166,6 +168,8 @@
                             <td v-html='d.valor_comprometido'></td>
                             <td v-html='d.georeferencia'></td>
                             <td v-html='d.tipo_negociacion'></td>
+
+                            <td v-html='d.identificador'></td>
 
 						</tr>
 						</tbody>
