--- a/views/reportes/baseGeneral.twig
+++ b/views/reportes/baseGeneral.twig
@@ -106,6 +106,7 @@
 
                             <th>RESULTADO</th>
                             <th>ACCION</th>
+                            <th>DESCRIPCIÓN</th>
                             <th>OBSERVACION</th>
                             <th>MOTIVO DE NO PAGO</th>
                             <th>SUB MOTIVO</th>
@@ -158,6 +159,7 @@
 
                             <td v-html='d.nivel_1_texto'></td>
                             <td v-html='d.nivel_2_texto'></td>
+                            <td v-html='d.nivel_3_texto'></td>
                             <td v-html='d.observaciones'></td>
                             <td v-html='d.nivel_1_motivo_no_pago_texto'></td>
                             <td v-html='d.nivel_2_motivo_no_pago_texto'></td>
