--- a/views/reportes/filtrosProduccionPlaza.twig
+++ b/views/reportes/filtrosProduccionPlaza.twig
@@ -55,7 +55,7 @@
 	</div>
 	<div class="card-footer">
 		<button id="btnFiltro" class="btn btn-success"><i class="glyphicon glyphicon-search"></i> Filtrar</button>
-		<button id="btnTodos" class="btn btn-success"><i class="fa fa-eye"></i> Ver todos</button>
+		<button id="btnTodos" class="btn btn-success"><i class="fa fa-eraser"></i> Limpiar filtros</button>
 		{% include "reportes/loader.twig" %}
 		<script>
             var appFiltros = new Vue({
