--- a/views/reportes/index.twig
+++ b/views/reportes/index.twig
@@ -1,14 +1,14 @@
 {% extends layoutApp %}
 {% block content %}
 	<div class="col-md-12 col-xl-12">
-		{% if menuReportes['diners']|length > 0 %}
 			<div class="card">
-				<div class="card-header">
-					<h4 class="card-title"><h1>REPORTES DINERS</h1></h4>
-				</div>
 				<div id="app">
 					<div class="card-body">
-						{% for chunk in menuReportes['diners'] %}
+
+						{% if menuReportes['diners_general']|length > 0 %}
+						<h2>REPORTES GENERALES</h2>
+						{% endif %}
+						{% for chunk in menuReportes['diners_general'] %}
 							<div class="row">
 								{% for item in chunk %}
 									<div class="col-sm-6 col-md-6 col-lg-6 col-xl-4">
@@ -30,8 +30,10 @@
 							</div>
 						{% endfor %}
 
-						<h2>REPORTES CADA DOS HORAS</h2>
-						{% for chunk in menuReportes['cada_horas'] %}
+						{% if menuReportes['diners_campo']|length > 0 %}
+							<h2>REPORTES DE CAMPO</h2>
+						{% endif %}
+						{% for chunk in menuReportes['diners_campo'] %}
 							<div class="row">
 								{% for item in chunk %}
 									<div class="col-sm-6 col-md-6 col-lg-6 col-xl-4">
@@ -53,8 +55,10 @@
 							</div>
 						{% endfor %}
 
-						{% for chunk in menuReportes['negociaciones'] %}
-							<h2>REPORTES DE NEGOCIACIONES</h2>
+						{% if menuReportes['diners_telefonia']|length > 0 %}
+							<h2>REPORTES DE TELEFONÍA</h2>
+						{% endif %}
+						{% for chunk in menuReportes['diners_telefonia'] %}
 							<div class="row">
 								{% for item in chunk %}
 									<div class="col-sm-6 col-md-6 col-lg-6 col-xl-4">
@@ -76,59 +80,15 @@
 							</div>
 						{% endfor %}
 
-						{% for chunk in menuReportes['productividad'] %}
-							<h2>REPORTES DE PRODUCTIVIDAD</h2>
+						{% if menuReportes['diners_operativo']|length > 0 %}
+							<h2>REPORTES DE OPERACIÓN</h2>
+						{% endif %}
+						{% for chunk in menuReportes['diners_operativo'] %}
 							<div class="row">
 								{% for item in chunk %}
 									<div class="col-sm-6 col-md-6 col-lg-6 col-xl-4">
 										<a href="{{ item.link }}">
-											<div class="card bg-success-gradient img-card">
-												<div class="card-body">
-													<div class="d-flex">
-														<div class="text-white">
-															<h2 style="font-size: 20px;" class="mb-0 number-font">{{ item.label }}</h2>
-															<p class="text-white mb-0">{{ item.description }}</p>
-														</div>
-														<div class="ms-auto"><i class="{{ item.icon }} text-white fa-3x"></i></div>
-													</div>
-												</div>
-											</div>
-										</a>
-									</div>
-								{% endfor %}
-							</div>
-						{% endfor %}
-
-						{% for chunk in menuReportes['recuperacion_ejecutivo'] %}
-							<h2>REPORTES DE RECUPERACIÓN POR EJECUTIVO (PENDIENTE REVISIÓN)</h2>
-							<div class="row">
-								{% for item in chunk %}
-									<div class="col-sm-6 col-md-6 col-lg-6 col-xl-4">
-										<a href="{{ item.link }}">
-											<div class="card bg-info-gradient img-card">
-												<div class="card-body">
-													<div class="d-flex">
-														<div class="text-white">
-															<h2 style="font-size: 20px;" class="mb-0 number-font">{{ item.label }}</h2>
-															<p class="text-white mb-0">{{ item.description }}</p>
-														</div>
-														<div class="ms-auto"><i class="{{ item.icon }} text-white fa-3x"></i></div>
-													</div>
-												</div>
-											</div>
-										</a>
-									</div>
-								{% endfor %}
-							</div>
-						{% endfor %}
-
-						{% for chunk in menuReportes['recuperacion'] %}
-							<h2>REPORTES DE RECUPERACIÓN</h2>
-							<div class="row">
-								{% for item in chunk %}
-									<div class="col-sm-6 col-md-6 col-lg-6 col-xl-4">
-										<a href="{{ item.link }}">
-											<div class="card bg-warning-gradient img-card">
+											<div class="card bg-info img-card">
 												<div class="card-body">
 													<div class="d-flex">
 														<div class="text-white">
@@ -147,7 +107,6 @@
 					</div>
 				</div>
 			</div>
-		{% endif %}
 	</div>
 
 	<script type="text/javascript">
