--- a/views/reportes/baseGeneral.twig
+++ b/views/reportes/baseGeneral.twig
@@ -119,6 +119,7 @@
                             <th>TIPO NEGOCIACION</th>
 
                             <th>TIPO GESTIÓN</th>
+                            <th>ORIGEN GESTIÓN</th>
 						</tr>
 						</thead>
 						<tbody>
@@ -172,6 +173,7 @@
                             <td v-html='d.tipo_negociacion'></td>
 
                             <td v-html='d.identificador'></td>
+                            <td v-html='d.origen'></td>
 
 						</tr>
 						</tbody>
